--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,34 @@
 @import "tailwindcss";
+@import "tw-animate-css";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer components {
+    .btn {
+      @apply bg-black text-white px-4 py-2 rounded-lg font-medium inline-flex items-center justify-center tracking-tight;
+    }
+    .btn-primary{
+      @apply bg-black text-white
+    }
+    .btn-text{
+      @apply text-black bg-transparent
+    }
+    .logo-ticker-image{
+      @apply h-8 w-auto
+    }
+    .tag{
+      @apply text-sm inline-flex border border-[#222]/10 px-3 py-1 rounded-lg tracking-tight;
+    }
+    .section-title{
+      @apply text-center text-3xl md:text-[54px] md:leading-[60px] font-bold tracking-tighter bg-gradient-to-b from-black to-[#001e80] text-transparent bg-clip-text;
+    }
+    .section-description{
+      @apply text-center text-[22px] leading-[30px] tracking-tight text-[#010d3e];
+    }
+    .section-heading{
+      @apply max-w-[540px] mx-auto;
+    }
+    .card{
+      @apply p-10 border bg-white border-[#F1F1F1] max-w-xs w-full rounded-3xl shadow-[0_7px_14px_#EAEAEA];
+    }
+    
   }
-}
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-}
